# VNova

./: .editorconfig  .gitattributes  .gitignore  .importlinter  .npmrc  .prettierignore  AGENTS.md  README.md  dependency-cruiser.config.mjs  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  pyproject.toml  tsconfig.base.json  vnova-review-handoff.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
docs/adr/: 0001-monorepo-and-deployment-boundaries.md  0002-contract-source-and-code-generation.md  0003-stream-session-segment-and-turn-lifecycle.md  0004-postgresql-outbox-and-redis-streams.md  0007-provider-gateway-and-fallback-isolation.md  0008-safety-gate-enforcement.md  0010-approved-media-and-tts-pipeline.md  0011-stage-host-wire-protocol-and-clock-synchronization.md  0015-layered-emergency-stop.md  0016-stage-host-and-cloud-local-topology.md  0017-data-retention-privacy-and-pii.md  0018-latency-budget-and-streaming-strategy.md  0019-authentication-authorization-and-operator-roles.md  0020-mode-transition-and-degradation-matrix.md  0021-broadcast-surface-inventory-and-overlay-policy.md  0022-voice-rights-and-talent-licensing-metadata.md  0023-event-subject-scope-correlation-and-ordering.md  0024-versioned-configuration-and-scoped-activation.md  0025-session-actor-ownership-command-ingress-and-fencing.md  0026-opaque-audit-references-for-deletable-personal-data.md  README.md
docs/architecture/: README.md  broadcast-surface-model.md  capacity-backpressure-and-cost-governance.md  domain-information-model.md  domain-record-lifecycle-catalog.md  implementation-roadmap.md  latency-budget.md  mode-transition-model.md  observability-sli-slo-and-alerting.md  (+11 more)
tooling/: __init__.py
(+97 files in other folders)
